--- a/po/wesnoth-multiplayer/it.po
+++ b/po/wesnoth-multiplayer/it.po
@@ -15,13 +15,13 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-02-06 18:02+0100\n"
-"Last-Translator: Antonio Rosella <arosella@yahoo.com>\n"
+"PO-Revision-Date: 2012-09-15 00:03+0100\n"
+"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8-bit\n"
+"Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 "X-Poedit-Language: Italian\n"
 "X-Poedit-Country: ITALY\n"
@@ -42,6 +42,7 @@ msgstr "Casuale"
 #: data/multiplayer/eras.cfg:116
 msgid "<span strikethrough='true' foreground='#%02x%02x%02x'>Side %d</span>"
 msgstr ""
+"<span strikethrough='true' foreground='#%02x%02x%02x'>Fazione %d</span>"
 
 #. [lua]: id=unit.id }), speaker=narrator, speaker=narrator
 #: data/multiplayer/eras.cfg:132
