--- a/po/wesnoth-tutorial/it.po
+++ b/po/wesnoth-tutorial/it.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-03-25 19:35+0100\n"
+"POT-Creation-Date: 2012-09-01 18:48+0200\n"
+"PO-Revision-Date: 2012-09-15 00:13+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -827,7 +827,7 @@ msgstr ""
 #. [set_menu_item]: id=skip_item
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1131
 msgid "End Scenario"
-msgstr ""
+msgstr "Fine scenario"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1144
@@ -835,6 +835,8 @@ msgid ""
 "Do you want to keep practicing? You can complete this scenario at any time "
 "using the right click."
 msgstr ""
+"Vuoi continuare ad esercitarti? Puoi comunque completare lo scenario in "
+"qualsiasi momento utilizzando il tasto destro del mouse."
 
 #. [option]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1146
@@ -1436,25 +1438,17 @@ msgstr "Attacca l’orco con un arciere"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:983
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "To review the capabilities of any unit—including an enemy—hover the mouse "
-#| "over it, and you will see a unit summary on the right of the screen"
 msgid ""
 "To review the capabilities of any unit—including an enemy—hover the mouse "
 "over it, and you will see a unit summary on the right of the screen"
 msgstr ""
-"\n"
 "Per esaminare le capacità di qualsiasi unità – nemici compresi – passa il "
 "mouse su di essa, vedrai il sommario dell’unità sulla destra dello schermo"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:983
-#, fuzzy
-#| msgid "<big>Unit Summaries</big>"
 msgid "Unit Summaries"
-msgstr "<big>Sommario dell’unità</big>"
+msgstr "Sommario dell’unità"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:991
@@ -1498,25 +1492,16 @@ msgstr ""
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1020
-#, fuzzy
-#| msgid "<big>Long-distance Movement</big>"
 msgid "Long-distance Movement"
-msgstr "<big>Spostamenti a lungo raggio</big>"
+msgstr "Spostamenti a lungo raggio"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1020
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "You can order a unit to move for multiple turns by selecting the unit and "
-#| "clicking on the destination. A number will indicate how many turns it "
-#| "will take to get there."
 msgid ""
 "You can order a unit to move for multiple turns by selecting the unit and "
 "clicking on the destination. A number will indicate how many turns it will "
 "take to get there."
 msgstr ""
-"\n"
 "Puoi far muovere un’unità per più turni se la selezioni e fai clic "
 "sull’obiettivo. Un numero indicherà quanti turni ci vorranno per "
 "raggiungerlo."
@@ -1715,28 +1700,19 @@ msgstr ""
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1242
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "After this dialog, hold the mouse over the landscape image below the "
-#| "minimap on the right. This brings up a description of the time of day, "
-#| "showing who has the advantage."
 msgid ""
 "After this dialog, hold the mouse over the landscape image below the minimap "
 "on the right. This brings up a description of the time of day, showing who "
 "has the advantage."
 msgstr ""
-"\n"
 "Dopo di questa finestra di dialogo, porta il mouse sull’immagine del "
 "panorama sotto la mappa a destra dello schermo. Vedrai una descrizione del "
 "periodo della giornata e mostrerà chi è in vantaggio."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1242
-#, fuzzy
-#| msgid "<big>Time of Day</big>"
 msgid "Time of Day"
-msgstr "<big>Ora del giorno</big>"
+msgstr "Ora del giorno"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1249
@@ -1765,21 +1741,11 @@ msgstr ""
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1263
-#, fuzzy
-#| msgid "<big>Tracking Unused Units</big>"
 msgid "Tracking Unused Units"
-msgstr "<big>Controllare le unità non usate</big>"
+msgstr "Controllare le unità non usate"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1263
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "You can ensure you use all your troops by pressing <b>n</b> to step from "
-#| "one unit to the next. If you press <b>space</b>, you can mark the "
-#| "currently selected unit as having finished its turn, which stops you "
-#| "moving it by accident later on. When <b>n</b> no longer selects a new "
-#| "unit, it’s safe to end your turn."
 msgid ""
 "You can ensure you use all your troops by pressing <b>n</b> to step from one "
 "unit to the next. If you press <b>space</b>, you can mark the currently "
@@ -1787,60 +1753,42 @@ msgid ""
 "accident later on. When <b>n</b> no longer selects a new unit, it’s safe to "
 "end your turn."
 msgstr ""
-"\n"
 "Puoi assicurati di aver usato tutte le unità in questo turno premendo <b>n</"
 "b> per passare da un’unità a quella successiva. Se premi <b>spazio</b> puoi "
-"indicare che l’unità attuale ha terminato il suo turno, che evita di "
+"indicare che l’unità attuale ha terminato il suo turno, il che evita di "
 "spostarla per sbaglio di seguito. Quando <b>n</b> non seleziona più nuove "
 "unità, puoi terminare il turno con tranquillità."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1268
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "In this scenario, you only need to defeat the orc leader to win. (Victory "
-#| "conditions for a scenario are given under <b>Scenario Objectives</b> in "
-#| "the <b>Main Menu</b>)."
 msgid ""
 "In this scenario, you only need to defeat the orc leader to win. (Victory "
 "conditions for a scenario are given under <b>Scenario Objectives</b> in the "
 "<b>Main Menu</b>)."
 msgstr ""
-"\n"
 "In questo scenario devi solo sconfiggere il capo degli orchi per vincere. "
 "(Le condizioni di vittoria di uno scenario sono fornite dalla voce "
 "<b>Obiettivi dello scenario</b> del <b>Menù principale</b>)."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1268
-#, fuzzy
-#| msgid "<big>Victory Conditions</big>"
 msgid "Victory Conditions"
-msgstr "<big>Condizioni della vittoria</big>"
+msgstr "Condizioni della vittoria"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1273
-#, fuzzy
-#| msgid "<big>Recruit the Right Unit Types</big>"
 msgid "Recruit the Right Unit Types"
-msgstr "<big>Reclutare i tipi di unità giusti</big>"
+msgstr "Reclutare i tipi di unità appropriati"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1273
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "Remember to recruit troops useful for the situation. Archers are "
-#| "particularly effective against Grunts, Wolf Riders and the orcish leader."
 msgid ""
 "Remember to recruit troops useful for the situation. Archers are "
 "particularly effective against Grunts, Wolf Riders and the orcish leader."
 msgstr ""
-"\n"
-"Ricordati di reclutare le unità adatte alla situazione: Gli arcieri sono "
-"particolarmente efficaci contro le reclute d’orco, i cavalcatori di lupi e "
-"il loro condottiero."
+"Ricordati di reclutare le unità adatte alla situazione: gli arcieri sono "
+"particolarmente efficaci contro le reclute d’orco, i cavalcatori di lupi e i "
+"loro condottieri."
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1291
@@ -1937,28 +1885,19 @@ msgstr ""
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1468
-#, fuzzy
-#| msgid "<big>Tracking Enemy Movement</big>"
 msgid "Tracking Enemy Movement"
-msgstr "<big>Controllare le mosse dei nemici</big>"
+msgstr "Controllare le mosse dei nemici"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1468
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "You can see where an enemy can reach by moving the mouse over them. You "
-#| "can see all possible enemy moves at once with the <b>Show Enemy Moves</b> "
-#| "command from the <b>Actions</b> menu."
 msgid ""
 "You can see where an enemy can reach by moving the mouse over them. You can "
 "see all possible enemy moves at once with the <b>Show Enemy Moves</b> "
 "command from the <b>Actions</b> menu."
 msgstr ""
-"\n"
 "Puoi vedere dove un nemico può arrivare spostando il mouse sopra di lui. È "
-"possibile vedere tutte le possibili mosse nemiche in una volta con <b>Mostra "
-"le mosse nemiche</b> nel menù <b>Azioni</b>."
+"possibile vedere tutte le possibili mosse nemiche in una volta con il "
+"comando <b>Mostra le mosse nemiche</b> nel menù <b>Azioni</b>."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1472
