updated Scottish Gaelic translation

--- a/po/wesnoth-test/gd.po
+++ b/po/wesnoth-test/gd.po
@@ -1,25 +1,27 @@
-# #-#-#-#-#  wesnoth-test.cpp.pot (wesnoth_up VERSION)  #-#-#-#-#
-# Scottish Gaelic translations for wesnoth_up package.
+# #-#-#-#-#  wesnoth-test.cpp.pot (PACKAGE VERSION)  #-#-#-#-#
+# Scottish Gaelic translations for PACKAGE package.
 # Copyright (C) 2012 Wesnoth development team
-# This file is distributed under the same license as the wesnoth_up package.
+# This file is distributed under the same license as the PACKAGE package.
 # Automatically generated, 2012.
 #
+# GunChleoc <fios@foramnagaidhlig.net>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-24 21:37+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2012-09-01 18:47+0200\n"
+"PO-Revision-Date: 2012-10-01 18:01+0100\n"
+"Last-Translator: GunChleoc <fios@foramnagaidhlig.net>\n"
+"Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "Language: gd\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  wesnoth-test.cpp.pot (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  wesnoth-test.wml.pot (PACKAGE VERSION)  #-#-#-#-#\n"
+"Plural-Forms: nplurals=2; plural=nplurals=4; plural=(n==1 || n==11) ? 0 : "
+"(n==2 || n==12) ? 1 : (n > 2 && n < 20) ? 2 : 3;\n"
+"X-Generator: Virtaal 0.7.0\n"
 
 #. [test_key2]
 #: data/test/test/_main.cfg:24
 msgid "testing translation reset."
-msgstr ""
+msgstr "deuchainn air ath-shuidheachadh an eadar-theangachaidh."
