updated Scottish Gaelic translation

--- a/po/wesnoth/gd.po
+++ b/po/wesnoth/gd.po
@@ -6,10 +6,10 @@
 # GunChleoc <fios@foramnagaidhlig.net>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-24 21:37+0200\n"
-"PO-Revision-Date: 2012-10-03 13:41-0000\n"
+"PO-Revision-Date: 2012-10-04 12:00-0000\n"
 "Last-Translator: GunChleoc <fiosAIGforamnagaidhligDOTnet>\n"
 "Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "Language: gd\n"
@@ -5903,7 +5903,7 @@ msgstr "Sàbhail ath-chluiche"
 
 #: src/savegame.cpp:981
 msgid "replay"
-msgstr "a-chluiche"
+msgstr "ath-chluiche"
 
 #: src/savegame.cpp:990
 msgid "Could not auto save the game. Please save the game manually."
