--- a/po/wesnoth-help/gd.po
+++ b/po/wesnoth-help/gd.po
@@ -7,7 +7,7 @@
 # GunChleoc <fios@foramnagaidhlig.net>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-24 21:37+0200\n"
 "PO-Revision-Date: 2012-10-02 23:58+0100\n"
