--- a/po/wesnoth-manual/gd.po
+++ b/po/wesnoth-manual/gd.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Wesnoth 1.10\n"
 "POT-Creation-Date: 2012-09-01 18:47+0300\n"
 "PO-Revision-Date: 2012-09-01 18:47+0300\n"
 "Last-Translator: Automatically generated\n"
