--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-24 21:37+0200\n"
-"PO-Revision-Date: 2012-07-08 03:54+0200\n"
+"PO-Revision-Date: 2012-10-06 16:10+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -22,7 +22,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.4\n"
+"X-Generator: Lokalize 1.5\n"
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:4
@@ -4332,63 +4332,63 @@ msgstr "?"
 
 #: src/loadscreen.cpp:222
 msgid "Initializing user interface"
-msgstr "Cargando a interface de usuario."
+msgstr "Cargando a interface de usuario…"
 
 #: src/loadscreen.cpp:223
 msgid "Loading game configuration"
-msgstr "Cargando a configuración do xogo."
+msgstr "Cargando a configuración do xogo…"
 
 #: src/loadscreen.cpp:224 src/loadscreen.cpp:231
 msgid "Verifying cache"
-msgstr "Verificando a caché."
+msgstr "Verificando a caché…"
 
 #: src/loadscreen.cpp:225 src/loadscreen.cpp:232
 msgid "Reading files and creating cache"
-msgstr "Lendo os ficheiros e creando a caché."
+msgstr "Lendo os ficheiros e creando a caché…"
 
 #: src/loadscreen.cpp:226 src/loadscreen.cpp:233
 msgid "Reading unit files"
-msgstr "Lendo os ficheiros das unidades."
+msgstr "Lendo os ficheiros das unidades…"
 
 #: src/loadscreen.cpp:227
 msgid "Reinitialize fonts for the current language"
-msgstr "Recargando os tipos de letra para a lingua actual."
+msgstr "Recargando os tipos de letra para a lingua actual…"
 
 #: src/loadscreen.cpp:228
 msgid "Searching for installed add-ons"
-msgstr "Buscando os complementos instalados."
+msgstr "Buscando os complementos instalados…"
 
 #: src/loadscreen.cpp:229
 msgid "Loading title screen"
-msgstr "Cargando a pantalla principal."
+msgstr "Cargando a pantalla principal…"
 
 #: src/loadscreen.cpp:230
 msgid "Loading data files"
-msgstr "Cargando os ficheiros de datos."
+msgstr "Cargando os ficheiros de datos…"
 
 #: src/loadscreen.cpp:234
 msgid "Loading level"
-msgstr "Cargando o nivel."
+msgstr "Cargando o nivel…"
 
 #: src/loadscreen.cpp:235
 msgid "Initializing teams"
-msgstr "Cargando as alianzas."
+msgstr "Cargando as alianzas…"
 
 #: src/loadscreen.cpp:236
 msgid "Loading units"
-msgstr "Cargando as unidades."
+msgstr "Cargando as unidades…"
 
 #: src/loadscreen.cpp:237 src/loadscreen.cpp:239
 msgid "Initializing display"
-msgstr "Cargando a visualización."
+msgstr "Iniciando a visualización…"
 
 #: src/loadscreen.cpp:238
 msgid "Building terrain rules"
-msgstr "Construíndo as regras do terreo."
+msgstr "Construíndo as regras do terreo…"
 
 #: src/loadscreen.cpp:240
 msgid "Starting game"
-msgstr "Comezando a partida."
+msgstr "Iniciando a partida…"
 
 #: src/map.cpp:196
 msgid "A map without a header is not supported"
