--- a/po/wesnoth-tutorial/gd.po
+++ b/po/wesnoth-tutorial/gd.po
@@ -9,16 +9,16 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-24 21:37+0200\n"
-"PO-Revision-Date: 2012-10-02 17:41+0100\n"
-"Last-Translator: GunChleoc <fios@foramnagaidhlig.net>\n"
+"PO-Revision-Date: 2012-10-15 12:22-0000\n"
+"Last-Translator: GunChleoc <fiosAIGforamnagaidhligDOTnet>\n"
 "Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "Language: gd\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=nplurals=4; plural=(n==1 || n==11) ? 0 : "
-"(n==2 || n==12) ? 1 : (n > 2 && n < 20) ? 2 : 3;\n"
-"X-Generator: Virtaal 0.7.0\n"
+"Plural-Forms: nplurals=4; plural=(n==1 || n==11) ? 0 : (n==2 || n==12) ? 1 : "
+"(n > 2 && n < 20) ? 2 : 3;\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:40
 msgid ""
@@ -35,7 +35,7 @@ msgstr ""
 #. Any questions email rusty@rustcorp.com.au!"
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:49
 msgid "Wesnoth Tutorial Part I"
-msgstr "Oideachadh Wesnoth Pàirt I"
+msgstr "Oideachadh Pàirt I"
 
 #. [side]: type=Fighter, id=student
 #. [command]
@@ -63,7 +63,7 @@ msgid ""
 "Healing\n"
 "Recruiting"
 msgstr ""
-"Ionnsaichidh tu na tha bunasach le:\n"
+"Ionnsaichidh tu na tha bunaiteach le:\n"
 "Gluasad\n"
 "Ionnsaighean\n"
 "Slànachadh\n"
@@ -98,7 +98,7 @@ msgstr "Li’sar"
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:212
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:218
 msgid "Welcome to Wesnoth!"
-msgstr "Fàilte gu Wesnoth!"
+msgstr "Fàilte gu Beasnad!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:214
@@ -438,7 +438,7 @@ msgstr ""
 "Ghabh thu baile! Tha do bhratach a’ snàmh air is chaidh a chur ri àireamh "
 "iomlan nam bailtean agad (Seallaidh an ìomhaigheag taighe air bàrr an sgrìn "
 "cò mheud bailtean a tha fo do chumhachd). Bheir bailtean an t-òr dhut a "
-"bhios a dhìth ort gus aonadan a thrusadh. Gach cuairt, gheibh thu dà phìos "
+"bhios a dhìth ort gus aonadan a thrusadh. Gach cuairt, gheibh thu dà bhonn "
 "òir is fear a bharrachd airson gach baile a th’ agad."
 
 #. [event]
@@ -530,7 +530,8 @@ msgstr ""
 #. [event]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:656
 msgid "Right click on a castle tile and select <b>Recruit</b>"
-msgstr "Dèan briogadh deas air leac caisteil is tagh <b>Trus</b>"
+msgstr ""
+"Dèan briogadh deas air aon dhe na leacan sa chaisteil is tagh <b>Trus</b>"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:690
@@ -729,7 +730,7 @@ msgstr ""
 "Cuimhnich gun cùlaich thu aonadan leònta dha na bailtean is gun trus thu a "
 "bharrachd nuair a bhios iad a dhìth. Thoir an dlùth-aire air na h-aonadan "
 "aig a bheil na <i>puingean eòlais (PE)</i> as motha ach an coisinn iad "
-"leibheilean is am  fàs iad nas cumhachdaiche."
+"rangan is am  fàs iad nas cumhachdaiche."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1012
@@ -743,7 +744,7 @@ msgid ""
 "each unit costs you one gold per turn."
 msgstr ""
 "Cuiridh gach baile <i>taic</i> ri aonad an asgaidh. An dèidh seo, cosgaidh "
-"gach aonad pìos òir sa chuairt."
+"gach aonad bonn òir sa chuairt."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1029
@@ -761,10 +762,10 @@ msgid ""
 msgstr ""
 "Nuair a choisinneas aonad puingean eòlais gu leòr (tha am <i>bàr-eòlais</i>, "
 "ma tha e ann, taobh <b>deas</b> a’ </i>bhàir-phuingean-beatha</i>), thèid e "
-"suas leibheil. Tha dà roghainn dhe dh’àrdachadh aig Cathaichean Sìthiche is "
-"’s urrainn dhut taghadh dè am  fear a dh’iarras tu. Co-dhiù, bidh an dà "
-"chuid dhe chosgaisean an lùib aonadan an dàrna leibheil na an lùib aonadan "
-"a’ chiad leibheil."
+"suas rang. Tha dà roghainn dhe dh’àrdachadh aig Cathaichean Sìthiche is ’s "
+"urrainn dhut taghadh dè am  fear a dh’iarras tu. Co-dhiù, bidh an dà chuid "
+"dhe chosgaisean an lùib aonadan an dàrna rang na an lùib aonadan a’ chiad "
+"rang."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1046
@@ -895,7 +896,7 @@ msgid ""
 msgstr ""
 ", an t-aonad air ùr-thrusadh, tha dà fheart aige: <i>làidir</i> is <i>glic</"
 "i>. Tha ‘làidir’ a’ ciallachadh gun dèan an t-aonad barrachd dochainn, is "
-"‘glic’ gu bheil as lugha dhe eòlas a dhìth air gus àrdachadh dha leibheil ùr."
+"‘glic’ gu bheil as lugha dhe eòlas a dhìth air gus àrdachadh dha rang ùr."
 
 #. [then]
 #. This string used as follows: "<unit name>' has two traits: <i>quick</i> and ...'"
@@ -962,7 +963,7 @@ msgid ""
 "Do not let it die!"
 msgstr ""
 "Chan eil ach mu aon mharbhadh (8 puingean-eòlais) a dhìth air an aonad seo "
-"gus leibheil fhaighinn! Na leig leis bàsachadh!"
+"gus rang fhaighinn! Na leig leis bàsachadh!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:287
@@ -984,7 +985,7 @@ msgstr "Oich! dhèanadh slànachadh ann am baile feum dhomh."
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:336
 msgid "I have $side.gold gold; enough to recruit!"
-msgstr "Tha $side.gold pìosan oìr agam; foghnaidh seo airson trusaidh!"
+msgstr "Tha $side.gold buinn oìr agam; foghnaidh seo airson trusaidh!"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:337
@@ -995,7 +996,7 @@ msgstr ""
 #. [tutorial]: id=2_Tutorial
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:347
 msgid "Wesnoth Tutorial Part II"
-msgstr "Oideachadh Wesnoth Pàirt II"
+msgstr "Oideachadh Pàirt II"
 
 #. [side]: type=Orcish Warrior, id=Thrag
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:369
@@ -1248,9 +1249,9 @@ msgid ""
 "income."
 msgstr ""
 "Ged nach urrainn dha na h-aonadan ùra agad gluasad, ’s urrainn dhutsa "
-"fhathast. Tha na còig aonadan agad a’ cosg 5 pìosan òir dhe bheathachadh is "
-"mar sin fàsaidh tu 3 pìosan òir nas bochda gach cuairt. Tha barrachd teachd "
-"a-steach a dhìth ort."
+"fhathast. Tha na còig aonadan agad a’ cosg 5 buinn òir dhe bheathachadh is "
+"mar sin fàsaidh tu 3 buinn òir nas bochda gach cuairt. Tha barrachd teachd a-"
+"steach a dhìth ort."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:675
@@ -1397,8 +1398,8 @@ msgid ""
 "The village supports one unit and pays 1 gold per turn. You’re only losing 1 "
 "gold per turn now."
 msgstr ""
-"Cuiridh am baile taic ri aonad is pàighidh e 1 phìos òir gach cuairt. Chan "
-"eil thu a’ call ach 1 phìos òir sa chuairt,"
+"Cuiridh am baile taic ri aonad is pàighidh e 1 bhonn òir gach cuairt. Chan "
+"eil thu a’ call ach 1 bhonn òir sa chuairt,"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:949
@@ -1875,7 +1876,7 @@ msgid ""
 "carefully!"
 msgstr ""
 "Tha an ceannard aca cha mhòr marbh! Gheibh an t-aonad a chuireas às dha 16 "
-"puingean-eòlais oir tha e air an dàrna leibheil. Tagh an t-aonad a bheir "
+"puingean-eòlais oir tha e air an dàrna rang. Tagh an t-aonad a bheir "
 "ionnsaigh air gu cùramach!"
 
 #. [then]
@@ -1885,7 +1886,7 @@ msgid ""
 "points. He would have advanced to second level soon."
 msgstr ""
 "Bidh sinn ag ionndrainn $deadguy.name| oir bha $deadguy.experience puingean-"
-"eòlais aige. Cha bhiodh e fada mus rachadh àrdachadh dhan dàrna leibheil."
+"eòlais aige. Cha bhiodh e fada mus rachadh àrdachadh dhan dàrna rang."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1444
@@ -1894,7 +1895,7 @@ msgid ""
 "points. She would have advanced to second level soon."
 msgstr ""
 "Bidh sinn ag ionndrainn $deadguy.name| oir bha $deadguy.experience puingean-"
-"eòlais aice. Cha bhiodh e fada mus rachadh a h-àrdachadh dhan dàrna leibheil."
+"eòlais aice. Cha bhiodh e fada mus rachadh a h-àrdachadh dhan dàrna rang."
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1461
@@ -1946,8 +1947,8 @@ msgid ""
 "Second level units are powerful, but not invulnerable! Goodbye, $deadguy."
 "name|."
 msgstr ""
-"Tha aonadan an darna leibheil cumhachdach, ach chan eil iad do-leònta! Mar "
-"sin leibh, $deadguy.name|."
+"Tha aonadan an darna rang cumhachdach, ach chan eil iad do-leònta! Mar sin "
+"leibh, $deadguy.name|."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1501
