updated Scottish Gaelic translation

--- a/po/wesnoth-units/gd.po
+++ b/po/wesnoth-units/gd.po
@@ -9,16 +9,16 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-09-01 18:48+0200\n"
-"PO-Revision-Date: 2012-10-02 19:17+0100\n"
+"PO-Revision-Date: 2012-10-11 13:47+0100\n"
 "Last-Translator: GunChleoc <fios@foramnagaidhlig.net>\n"
 "Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "Language: gd\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=nplurals=4; plural=(n==1 || n==11) ? 0 : "
-"(n==2 || n==12) ? 1 : (n > 2 && n < 20) ? 2 : 3;\n"
-"X-Generator: Virtaal 0.7.0\n"
+"Plural-Forms: nplurals=4; plural=(n==1 || n==11) ? 0 : (n==2 || n==12) ? 1 : "
+"(n > 2 && n < 20) ? 2 : 3;\n"
+"X-Generator: Virtaal 0.7.1\n"
 
 #. [unit_type]: id=Dwarvish Dragonguard, race=dwarf
 #. [unit_type]: id=Dwarvish Masked Dragonguard, race=dwarf
@@ -929,6 +929,12 @@ msgid ""
 "their natural grace ensures that they can best any of humanity’s fresh "
 "recruits."
 msgstr ""
+"Bha cliù aig na sìthichean air boghadaireachd a-riamh is thig an sgil seo "
+"dhaibh gu nàdarra air iomadh adhbhar. Bidh fiù 's an fheadhainn bhreòite "
+"fìor chunnartach le bogha na làimh is gabhaidh mòran ris an airm seo ri àm "
+"cogaidh. Ged a bhios iad caran so-leònta air sàilleibh dìth eòlais a thaobh "
+"catha, nì iad a' chùis air fear air ùr-trusadh na cinne-daonna sam bith le "
+"taic an loinne nàdarra."
 
 #. [attack]: type=arcane
 #. [attack]: type=blade
@@ -1001,6 +1007,16 @@ msgid ""
 "brethren lost earlier in the battle. Although not so base in design, it is "
 "not at all inaccurate."
 msgstr ""
+"Thàinig an t-ainm annasach air na ‘Dìoghaltairean’ Sìthiche bho innleachd a "
+"chleachdas na sàr-shealgairean seo gu tric. Leigidh iad air an nàmhaid "
+"briseadh tro dhìon mas fhìor is nuair a leanas na saighdearan as laige às an "
+"dèidh bhon chùlaibh, thig na boghadairean seo a-mach bhon chòmhdach is bheir "
+"iad ionnsaigh orra, a' bacadh slighean an t-solair is a' cuairteachadh an "
+"nàmhad le aon bhuille eagallach.\n"
+"\n"
+"Aig amannan, bheachdaichte air mar sheòrsa dhe dhìoghaltas airson nan co-"
+"dhalta a chaill iad na bu tràithe air a' bhlàr. Ged nach e seo a bhiodh "
+"fainear dhaibh, chan eil e fada cearr."
 
 #. [female]
 #: data/core/units/elves/Avenger.cfg:166
@@ -1022,6 +1038,12 @@ msgid ""
 "their leaders, and the tendency to choose leaders of merit is one of the "
 "quiet strengths of the elves."
 msgstr ""
+"Eucoltach ri cinnidhean eile, bidh sìthichean gu math toilichte leantainn gu "
+"saor-thoileach air an fheadhainn aig a bheil eòlas cogaidh. 'S e diofar mòr "
+"a th' ann eadarra is an cinne-daonna a cleachdas èigneachadh is smàdadh gu "
+"tric gus ceannardas fhaighinn. Is aon dhe na neartan aig na sìthichean gun "
+"gabh iad ri gliocas an ceannardan is gu bheil iad buailteach ri feadhainn "
+"araidh a thaghadh."
 
 #. [unit_type]: id=Elvish Champion, race=elf
 #: data/core/units/elves/Champion.cfg:4
@@ -1126,6 +1148,10 @@ msgid ""
 "by the standards of other races, and put them to effective use on the "
 "battlefield."
 msgstr ""
+"Ged nach eil na sìthichean cogail bho thùs, nì an an loinne is cliseachd "
+"nàdarra feum dhaibh ri amannan èiginneach mar a nì an ceàrd sgileil. Tuigidh "
+"sìthiche ciamar a chleachdas e claidheamh is bogha gu fìor-luath an coimeas "
+"ri cinnidhean eile is gheibh e feum àsta gu èifeachdadh air a' bhlàr."
 
 #. [unit_type]: id=Elvish Hero, race=elf
 #: data/core/units/elves/Hero.cfg:4
@@ -1314,6 +1340,13 @@ msgid ""
 "The healing abilities of the elves are also remarkable, and of capital use "
 "in battle."
 msgstr ""
+"Tha comas draoidheachd aig sìthichean bho thùs. Bheir seo dàimh ris an t-"
+"saoghal nàdarra dhaibh a ghairmicheas iad mar chaidreabhach air a' bhlàr. "
+"Math dh'fhaoidhte gun tèid nàimhdean a shiubhlas sna coilltean aca amladh le "
+"freumhan is am bacadh leis an talamh fhèin air a bheil iad nan seasamh.\n"
+"\n"
+"Tha comas slànachaidh annasach aig na sìthichean cuideachd a tha air leth "
+"feumail air a' bhlàr."
 
 #. [unit_type]: id=Elvish Sharpshooter, race=elf
 #: data/core/units/elves/Sharpshooter.cfg:4
@@ -1525,6 +1558,17 @@ msgid ""
 "mounts have a rather easy time traversing the mountains, though water and "
 "woods will still slow them down."
 msgstr ""
+"Chan eilear cinnteach cuine a thòisicheadh air madaidhean-allaidh a "
+"challachadh is a' marcadh orra, ach tha am buaidh dha na bòcain follaiseach. "
+"Tha bòcain nas lugha is mòran nas laige na an cinneadh deamhain is thèid an "
+"cur dhan phàirt as cunnartaiche is neo-thaitniche air a' bhlàr. Bidh pàirt "
+"nas sàbhailte is, abramaid, nas èibhinne aig an fheadhainn a nì a chùis air "
+"munnta a lorg.\n"
+"\n"
+"Tha e cha mhòr cinnteach nach fhulangadh madadh-allaidh duine le armachd "
+"meatailt air le truimead, ach tha bòcan le armachd leathair aotrom gu leòr "
+"dhaibh. Seach mar a tha each, tha na munntaichean seo làn comasach dol thar "
+"nam beann ged a chuireas uisge no coille maille orra fhathast."
 
 #. [unit_type]: id=Gryphon, race=gryphon
 #: data/core/units/gryphons/Gryphon.cfg:4
@@ -1687,6 +1731,12 @@ msgid ""
 "woodsmen, military bowmen are trained to competence with both a bow and a "
 "short sword, and are very common on the battlefield."
 msgstr ""
+"Mhothaicheadh gum b' urrainneadh boghadaireachd a chleachdadh airson amasan "
+"seach sealgaireachd on toiseach tòiseachaidh is tha boghadairean riatanach "
+"ann an cogaidhean bho sheann aimsir. Mar as trice, buinidh boghadairean "
+"cogaidh ri teaghlaichean iriosal a leithid croitearan no fir-coille. Thèid "
+"an trèanadh gus am bi iad comasach an dà chuid air bogha is claidheamh "
+"goirid is tha iad glè chumanta air a' bhlàr."
 
 #. [attack]: type=blade
 #: data/core/units/humans/Loyalist_Bowman.cfg:36
@@ -1945,6 +1995,13 @@ msgid ""
 "carry their weapons as a badge of pride, and most bowmen look forward to the "
 "day they can begin using one."
 msgstr ""
+"'S e airm eagallach a th' anns na boghachan mòra, ach tha iad ro dhoirbh do "
+"na boghadairean toisiche. Tha neart mòr a dhìth gus fear a tharraing is cha "
+"bhi an astar is neart a bharrachd a gheibhear leis gu feum sam bith mura h-"
+"eil cuimse mhath aig a' bhoghadair leis an arm seo. Giùlainidh na mòr-"
+"bhoghadairean an airm gu moiteil is tha fiùghair air a' mhòr chuid dhe "
+"bhoghadairean air an latha as urrainn dhaibh tòiseachadh air fear a "
+"chleachdadh."
 
 #. [unit_type]: id=Master Bowman, race=human
 #: data/core/units/humans/Loyalist_Master_Bowman.cfg:4
@@ -2074,6 +2131,13 @@ msgid ""
 "armed with a shield and a few javelins, spearmen are the staple of most "
 "armies, often thrown into the front lines with only the most basic training."
 msgstr ""
+"'S e sògh cosgail a th' anns na claidheamhan do mhòran is chan eil e "
+"comasach dha chroitearan fear a cheannach. Tha sleaghan mòran nas fhasa ri "
+"an dèanamh is nì iad gu math fiù 's às aonais ceann slèigh, ged a tha e "
+"comasach dha mhòran paigheadh airson fear. Le armachd leathair orra is gu "
+"tric le sgiath orra is gath no dhà nan làimh, tha sleaghadairean nam prìomh-"
+"shaighdearan aig a' mhòr chuid dhe dh'fheachdan, gu tric san sreath-aghaidh "
+"is gun mhòran trèanaidh aca."
 
 #. [unit_type]: id=Swordsman, race=human
 #: data/core/units/humans/Loyalist_Swordsman.cfg:4
@@ -2176,6 +2240,9 @@ msgid ""
 "wearying years of battle. Nevertheless they remain feared on the battlefield "
 "on account of their powerful lightning bolts."
 msgstr ""
+"Bha iad mòr uair ach dh'fhalbh pàirt dhen cumhachd air na seann-dhraoidhean "
+"às dèidh bhliadhnaichean claoidheach dhe chogadh. Co-dhiù, tha iad eagallach "
+"air a' bhlàr fhathast air sàilleibh nan gathan dealanach aca."
 
 #. [attack]: type=fire
 #: data/core/units/humans/Mage_Elder.cfg:35
@@ -2418,6 +2485,12 @@ msgid ""
 "their inferior weaponry they are quite good at harrying their enemies, "
 "especially under cover of darkness."
 msgstr ""
+"Nì an uaislean fanaid air na eucoirich beaga seo gu tric is cuiridh iad "
+"'slaightearan' orra, oir feumaidh iad obraichean a dhèanamh a leithid gille-"
+"ruith no rabhadair far am bi iad a' ruith mun cuairt gu mòr. Nì am fulangas "
+"is a' chliseachd a choisinneas iad leis an t-seòrsa dhe dh'obrach seo feum "
+"dhaibh air a' bhlàr is tha iad math gu leòr air creachadh an nàimhdean gu h-"
+"araidh san dorchadas, ged nach eil airm matha aca."
 
 #. [attack]: type=impact
 #: data/core/units/humans/Outlaw_Footpad.cfg:38
@@ -2502,6 +2575,11 @@ msgid ""
 "sometimes manage to avoid the imprisonment or death that awaits most of "
 "their colleagues."
 msgstr ""
+"Tha daoine ann gun sgilean sònraichte nach eil comasach no deònach air "
+"beatha onarach a chaitheamh. Thathar eòlach air an fheadhainn a bhios beò fo "
+"cheann trom nan gnothaichean mar 'ruspal'. Ma tha fortan is eòlas gu leòr "
+"aca, seachnaidh iad aig amannan am prìosan is am bàs a bhios ron mhòr chuid "
+"dhiubh."
 
 #. [unit_type]: id=Thief, race=human
 #: data/core/units/humans/Outlaw_Thief.cfg:4
@@ -2519,6 +2597,14 @@ msgid ""
 "their feet, and good with knives. They happily employ less-than-honorable "
 "tactics in combat, seeing little merit in a ‘fair fight’."
 msgstr ""
+"Cho fad 's a bheil chuimhne, tha cleachdadh annasach aig buill an caochladh "
+"'chomann' dhe ghlacairean-ràdain a nochdas ann am baile mòr sam bith is 's e "
+"seo gun gealaich iad am falt le aol gus am fàs e liath. Tha e dàna seo a "
+"dhèanamh, oir thig gnothaichean nach eil buileach laghail an cois an obrach "
+"mar as trice. Tha iomadh sgil aig mèirlich is feumaidh iad a bhith aotrom "
+"air an casan is math air sgianan. Tha iad sàsaichte le innleachdan mì-"
+"onarail air a' bhlàr on a tha iad dhen bheachd nach dèanadh ‘sabaid "
+"chothromach’ feum sam bith dhaibh."
 
 #. [female]
 #: data/core/units/humans/Outlaw_Thief.cfg:377
@@ -2539,6 +2625,12 @@ msgid ""
 "Regardless of their background, they all share a penchant for beating their "
 "victims with large clubs."
 msgstr ""
+"Thig burraidhean à iomadach àite; fhad 's a bhuineas cuid dhiubh dhan "
+"bheatha seo bho thùs, b' àbhaist mòran dhiubh a bhith nan saighdearan nach "
+"robhar a meas freagarrach airson an t-seirbheis tuilleadh no croitearan a "
+"chaidh fhuadach. Thèid iad nam burraidhean o chionn 's nach eil beòshlaint "
+"eile aca. Ge b' e cò às a thàinig iad, tha iad buailteach ri bualadh air an "
+"ìobairteach le steabhagan mòra."
 
 #. [unit_type]: id=Peasant, race=human
 #: data/core/units/humans/Peasant.cfg:4
@@ -2553,6 +2645,11 @@ msgid ""
 "homes. However, if you’re hurling peasants at your foes, you’re clearly out "
 "of superior forces."
 msgstr ""
+"Tha croitearan cianail fhèin cudromach dhan eaconamaidh dùthchail is cha "
+"tèid iad nan saighdearan mura h-eil cruaidh feum orra. Ged nach eil iad "
+"cogail o thùs, dìonaidh iad na dachaighean aca gu dàna. Co-dhiù, mura toir "
+"thu ionnsaigh air an nàmhaid ach le croitearan, tha e follaiseach nach eil "
+"saighdearan nas fhearr agad."
 
 #. [attack]: type=pierce
 #: data/core/units/humans/Peasant.cfg:37 data/core/units/humans/Peasant.cfg:46
@@ -2624,6 +2721,14 @@ msgid ""
 "Because of their experience, these hunters are unusually capable at night, "
 "and in forests and swamps."
 msgstr ""
+"Ged nach deach an trèanadh airson a' chogaidh, tha na sgilean aig "
+"sealgairean (gu h-araidh air boghadaireachd) feumail air a' bhlàr. Bidh feum "
+"air poidsear no dhà aig gach buidheann dhe shaighdearan no spùinneadairean a "
+"shiubhlas tron fhàsach, chan ann a-mhàin airson seilg ach cuideachd gus taic "
+"a thoirt dhaibh le sabaid chruaidh sam bith.\n"
+"\n"
+"Air sàilleibh an eòlais, bidh na sealgairean seo air leth comasach air an "
+"oidhche is ann an coilltean is bogalaichean."
 
 #. [unit_type]: id=Ranger, race=human
 #: data/core/units/humans/Woodsman_Ranger.cfg:5
@@ -2733,6 +2838,8 @@ msgid ""
 "Skilled denizens of the sea, Mermen are powerful and quick in any watery "
 "environment, but lose most of their mobility on land."
 msgstr ""
+"Sgileil sa mhuir, tha daoine-mara neartmhor is luath ann an àrainneachd "
+"uisgeach sam bith, ach caillidh iad a' mhòr chuid dhe an gluasacachd air tìr."
 
 #. [unit_type]: id=Merman Hoplite, race=merman
 #: data/core/units/merfolk/Hoplite.cfg:4
@@ -3287,6 +3394,12 @@ msgid ""
 "semblance of training. Even as poorly handled as they are, their weapons can "
 "still be quite deadly, and the wielders thereof rarely march alone."
 msgstr ""
+"Am measg nan deamhan, thathar a' beachdachadh air a' bhogha mar arm gealtach "
+"gu tric, ach tha fiù 's na deamhain, gu h-araidh an fheadhainn òga is tana, "
+"ciallach gu leòr gus a chleachdadh. Chan eil uidheamachd mhath aig "
+"boghadairean deamhain ach ainneamh is chan fhaigh iad trèanadh sam bith. Co-"
+"dhiù no co-dheth, faodaidh na airm aca a bhith gu math cunnartach fhathast "
+"is droch sheans gu bheil na deamhain a chleachdas iad nan aonar."
 
 #. [unit_type]: id=Orcish Assassin, race=orc
 #: data/core/units/orcs/Assassin.cfg:4
@@ -3334,6 +3447,10 @@ msgid ""
 "or elven fighters, Grunts can deliver much more powerful blows, and take "
 "more hits before falling."
 msgstr ""
+"Tha madagain dheamhain air cridhe gach feachd nan deamhan. Ged a tha iad nas "
+"slaodaiche na cathaichean na cinne-daonna no nan sìthichean, bheir iad "
+"seachad buillean mòran nas treasa is fulaingidh iad barrachd buillean mus "
+"tuit iad."
 
 #. [unit_type]: id=Orcish Leader, race=orc
 #: data/core/units/orcs/Leader.cfg:4
@@ -3446,6 +3563,9 @@ msgid ""
 "respected among the Orcs, and highly feared by their foes. Their only "
 "weakness is their inability to wield the bow."
 msgstr ""
+"Bhon an do dh'ionnsaich iad sabaid le dà chlaidheamh, tha spèis mhòr aig na "
+"deamhain eile air Laochain Dheamhain is eagal mòr aig na nàimhdean orra. "
+"Chan eil laigse aca ach nach eil iad comasach air a' bhogha."
 
 #. [unit_type]: id=Saurian Ambusher, race=lizard
 #: data/core/units/saurians/Ambusher.cfg:4
